--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,6 +50,10 @@ width: 45%;
 	height: 175px;
 	width: 75%;
 }
+.rowimage4 {
+	height: 300px;
+	width: 50%;
+}
 #Page2{
 	text-align: center;
 	font-size: 1px;
